# PlaneManageSystem

./: CMakeLists.txt  README.MD  global_config.h  main.cpp
Data/: AdminLogin.txt  AirlineTable.txt  Tickets.txt  UserLogin.txt  UserTickets.txt
backend/: backend.cpp  backend.h
database/: database.cpp  database.h
frontend/: frontend.cpp  frontend.h
lib/: filetool.cpp  filetool.h  saver.cpp  saver.h  serializer.cpp  serializer.h
tests/: test_database.cpp  test_database.h
